--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="LoginButton">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
@@ -152,8 +152,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3">
-                    <a class="btn btn-block btn-sm btn-warning" data-toggle="modal"
-                    href="#reserveModal">Reserve Table</a>
+                    <a class="btn btn-block btn-sm btn-warning" 
+                    id="reserveButton">Reserve Table</a>
                    
                 </div>
             </div>
@@ -323,6 +323,12 @@
                 $("#carouselButton").children("span").removeClass('fa-play');
                 $("#carouselButton").children("span").addClass('fa-pause');                    
             }
+        });
+        $('#LoginButton').click(function(){
+            $('#loginModal').modal('show');
+        });
+        $('#reserveButton').click(function(){
+            $('#reserveModal').modal('show');
         });
 
     });
